# beast-dragon

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  PROJECT.md  README.md  beast.sln  beast.visualdproj  ctimeProblem.txt  dscanner.ini  dub.json  dub.sdl  dub.userprefs  generateVisualDProject.bat  notes.txt  poznamky.txt  runTests.bat  runTests.sh
doc/: bachelor_thesis_CZ.txss  done_undone.txt  isp.txss  problem_koncept.docx  reference.txss  tex_session.txss  ~$oblem_koncept.docx  ~WRL1878.tmp
doc/bachelor_thesis_CZ/: Makefile  fitthesis.cls  header.tex  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex  support.tex
doc/bachelor_thesis_CZ/obrazky-figures/: compiling_interpretation.graphml  (+5 more)
doc/excel_article/: 2017-ExcelFIT-Beast-bib.bib  2017-ExcelFIT-Beast.tex  2017-ExcelFIT-Beast.txss  2017-ExcelFIT-ShortName - kopie.tex  ExcelAtFIT.cls  support.tex
doc/isp_text/: export_rename.d  header.tex  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.ptc  projekt.tex  support.tex
doc/isp_text_cz/: main.tex
doc/isp_text_old/: header.tex  main.tex  support.tex
doc/master_thesis_CZ/: fitthesis.cls  header.tex  projekt-01-kapitoly-chapters-en.tex  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices-en.tex  projekt.tex  support.tex
doc/reference/: header.tex  main.tex  mainpage.tex  support.tex
reference/: header.tex  main.tex  mainpage.tex  support.tex
src/beast/: context.d  error.d  main.d  toolkit.d
src/nati/: main.cpp  utility.h
test/: README.md  beast_testsuite.sln  dub.json
test/output/: decorators.duplicithints.cpp  decorators.staticscopevar.cpp  module.emptysource.cpp  module.matchingname.cpp  resolving.coretypes.cpp  resolving.localvarusage.cpp  resolving.simplelocalvariable.cpp
test/tests/: README.md
(+625 files in other folders)
